fix(toggle-switch): fix content gap

--- a/client/design-system/assets/scss/abstracts/_components.scss
+++ b/client/design-system/assets/scss/abstracts/_components.scss
@@ -1941,15 +1941,7 @@ $toggle-switch:(
 )
 ),
   gap: (
-  value: (
   value: 10px,
-  type: "spacing",
-  unit: "px",
-  meta: (
-  description: "Extra small gap",
-  category: "spacing"
-)
-),
   type: "spacing",
   unit: "px",
   meta: (
@@ -1978,7 +1970,7 @@ $toggle-switch:(
 ),
   label: (
   font-style: (
-  value: label-1,
+  value: label-3,
   type: "alias"
 )
 )
@@ -2003,15 +1995,7 @@ $toggle-switch:(
 )
 ),
   gap: (
-  value: (
   value: 10px,
-  type: "spacing",
-  unit: "px",
-  meta: (
-  description: "Extra small gap",
-  category: "spacing"
-)
-),
   type: "spacing",
   unit: "px",
   meta: (
@@ -2040,7 +2024,7 @@ $toggle-switch:(
 ),
   label: (
   font-style: (
-  value: label-1,
+  value: label-3,
   type: "alias"
 )
 )
@@ -2065,15 +2049,7 @@ $toggle-switch:(
 )
 ),
   gap: (
-  value: (
   value: 10px,
-  type: "spacing",
-  unit: "px",
-  meta: (
-  description: "Extra small gap",
-  category: "spacing"
-)
-),
   type: "spacing",
   unit: "px",
   meta: (
@@ -2102,7 +2078,7 @@ $toggle-switch:(
 ),
   label: (
   font-style: (
-  value: label-1,
+  value: label-3,
   type: "alias"
 )
 )
